--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,3 @@
-
-
 /*--------------------------------------------------------------------- File Name: responsive.css ---------------------------------------------------------------------*/
 
 
@@ -120,6 +118,11 @@
     .copyright::after {
         background: transparent;
     }
+    .tech {
+        -ms-flex: auto;
+        flex: auto;
+        max-width: fit-content;
+    }
 }
 
 @media (max-width: 575px) {
@@ -189,7 +192,7 @@
         display: inherit !important;
         padding: 0;
         width: 100%;
-        margin-top: -45px;
+        margin-top: -76px;
     }
     .navigation .navbar-collapse {
         background: #fff;
@@ -216,5 +219,9 @@
         background: url(../images/menu_icon.png);
         background-repeat: no-repeat;
     }
+    .tech {
+        -ms-flex: auto;
+        flex: auto;
+        max-width: fit-content;
+    }
 }
-
